Fix font-size footer on mobile, and fix top margin on main

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -102,7 +102,7 @@ header {
     flex: 1;
     font-size: 12px;
     text-align: center;
-    margin-top: 72.5px;
+    margin-top: 61.27px;
     margin-left:10px;
     margin-right: 10px;
     padding-top: 0px;
@@ -188,6 +188,7 @@ header {
 
 .radio-buttons {
     display: flex;
+    justify-content: center;
     padding-top: 10px;
 }
 
@@ -221,6 +222,10 @@ footer {
    footer i {
     font-size: 150%;
     color: #F4E0D9;
+   }
+
+   .copyright-text {
+    font-size: 60%;
    }
 
 
@@ -260,7 +265,7 @@ footer {
 /* Main content*/
     main {
         font-size: 120%;
-        margin-top: 102.09px;
+        margin-top: 102.32px;
         margin-left: 17px;
         margin-right: 17px;
         padding-top: 2rem;
@@ -314,6 +319,10 @@ footer {
             font-size: 170%;
         }
 
+        .copyright-text {
+            font-size: inherit;
+        }
+
    }
 
    /* Media query larger (laptops and desktops, 992px and up) */
@@ -332,6 +341,7 @@ footer {
             font-size: 140%;
             margin-left: 20px;
             margin-right: 20px;
+            margin-top: 117.38px;
             background-image: url('../images/—Pngtree—palm tree silhouette icon design_5561952.png');
             background-position: left;
             background-size: 600px;
